[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laserfun"
version = "0.0.1"
description = "Python functions for lasers"
license = { text = "MIT" }
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.15.0",
    "scipy>=1.6.0"
]

[tool.setuptools.packages.find]
where = ["laserfun"]